Fix light mode contrast

--- a/alchemy-web/src/styles/custom.css
+++ b/alchemy-web/src/styles/custom.css
@@ -4,3 +4,8 @@
   --sl-color-accent: #0C991B;
   --sl-color-accent-high: #E6C965;
 } 
+
+[data-theme="light"] {
+  --sl-color-accent: #3EA248;
+  --sl-color-text-accent: #B38D12;
+}
